# sqpnp_simple

./: Cargo.toml  README.md  main.py
benches/: sqpnp_benchmark.rs
examples/: random_points.rs  random_points_plane.rs
src/: lib.rs
