[package]
name = "sqpnp_simple"
version = "0.1.6"
edition = "2021"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "SQPnp camera pose estimation"
homepage = "https://github.com/powei-lin/sqpnp_simple"
repository = "https://github.com/powei-lin/sqpnp_simple"
keywords = ["solvepnp", "vision", "pose"]
categories = ["data-structures", "science", "mathematics", "science::robotics"]
exclude = ["/.github/*", "*.ipynb", "./scripts/*", "examples/*", "tests/*"]

[dependencies]
glam = "0.30.0"
log = "0.4.22"
nalgebra = { version = "0.33.2", features = ["rand"] }

[[example]]
name = "random_points"

[[example]]
name = "random_points_plane"

[dev-dependencies]
env_logger = "0.11.5"
rand = "0.9.0"
diol = "0.8.0"

[[bench]]
name = "sqpnp_benchmark"
harness = false

